[package]
name = "matchbot-api"
version = "0.1.1"
authors = ["MartinWienc <32913968+MartinWienc@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
actix-web = { version = "4.1.0", features = ["openssl"] }
openssl = "0.10.41"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "tls", "offline"] }
awc = { version = "3.0.1", features = [ "openssl" ] }
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_s3 = "0.48.0"
futures-util = "0.3.24"
anyhow = "1.0.66"
steamid = { git = "https://github.com/JohnPeel/steamid" }