[package]
name = "matchbot-api"
version = "0.3.0"
authors = ["MartinWienc <32913968+MartinWienc@users.noreply.github.com>"]
edition = "2021"

[dependencies]

steamid = { git = "https://github.com/JohnPeel/steamid" }

base64 = "0.13"
bytes = "1.2"
derive_more = "0.99"
dotenvy = "0.15"
env_logger = "0.9"
http = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "*", features = ["time"]}
actix-web = { version = "4.1", features = ["rustls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
rust-s3 = { version = "0.32", default-features = false, features = ["with-tokio", "tokio-rustls-tls"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "tls", "offline"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "*"